<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="20dp"
    android:background="@color/white">

    <ImageView
        android:id="@+id/appLogo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/actual_logo"
        android:contentDescription="@drawable/actual_logo"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/btnAlert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_emergency_alert"
        android:layout_marginTop="30dp"
        android:background="@drawable/user_bubble"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/btnTrackLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/live_location_tracking"
        android:layout_marginTop="10dp"
        android:background="@drawable/user_bubble"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/btnFakeCall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/simulate_fake_call"
        android:layout_marginTop="10dp"
        android:background="@drawable/user_bubble"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/btnSafeRoutes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/find_safer_routes"
        android:layout_marginTop="10dp"
        android:background="@drawable/user_bubble"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/btnSaveContacts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_emergency_contacts"
        android:layout_marginTop="10dp"
        android:background="@drawable/user_bubble"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/openChatButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="Open Chat"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:background="@drawable/user_bubble"
        android:textColor="@android:color/white" />
    <TextView
        android:id="@+id/loginTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Logout"
        android:textSize="18sp"
        android:textColor="@android:color/holo_blue_dark"
        android:padding="16dp"
        android:layout_gravity="center"
        android:clickable="true"
        android:focusable="true" />
</LinearLayout>